# bun

cmake/targets/: BuildBun.cmake  BuildRustPoolFFI.cmake
conductor/: tracks.md
conductor/tracks/bun_rust_confluence_20260315/: EXECUTIVE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_PROGRESS.md  PHASE5_COMPLETE.md  PHASE5_PROGRESS.md  README.md
scripts/: test_rust_pool_memory.sh
src/: bun.zig  js_parser.zig  pool.zig
src/bun.js/: ConsoleObject.zig  web_worker.zig  webcore.zig
src/bun.js/api/: Archive.zig
src/bun.js/bindings/: BunProcess.cpp  BunProcess.h  rust_pool.zig
src/bun.js/modules/: BunJSCModule.h
src/bun.js/node/: path_watcher.zig
src/bun.js/test/: pretty_format.zig
src/bundler/: LinkerContext.zig  LinkerGraph.zig
src/bundler/linker_context/: computeChunks.zig
src/http/: zlib.zig
src/http/websocket_client/: CppWebSocket.zig  WebSocketUpgradeClient.zig
src/install/: npm.zig
src/paths/: path_buffer_pool.zig
src/rust_pool_ffi/: Cargo.toml
src/rust_pool_ffi/src/: lib.rs
test/: FINAL_SUMMARY.md  ISSUE_BUN_TRACKING.md  ISSUE_LLVM_LSAN_FALSE_POSITIVES.md  ISSUE_WEBKIT_GC_LEAKS.md  SQUASHED_LEAK_ISSUES.md  UPSTREAM_ENGAGEMENT_REPORT.md  UPSTREAM_ISSUES_SUMMARY.md  asan_tracker.zig  comment_16729.md  comment_17185.md  comment_17837.md  reopen_comment.md  rust_objectpool.test.zig  urgent_comment.md  urgent_comment_fixed.md
test/js/bun/: objectpool.test.ts  rust_pool.test.ts
test/regression/issue/: 28012.test.ts  28038.test.ts
(+5 files in other folders)
