[package]
name = "bun_pool_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "bun_pool_ffi"
crate-type = ["staticlib"]

[dependencies]
literbike = { path = "../../../literbike", default-features = false, features = ["json", "quic"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
